# yaxpeax-x86

./: CHANGELOG  Cargo.toml  README.md  goodfile
ffi/long_mode/: Cargo.toml
ffi/protected_mode/: Cargo.toml
ffi/real_mode/: Cargo.toml
ffi/src/: long_mode.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: behavior_does_not_panic.rs  decode_does_not_panic.rs  displaysink_used_correctly.rs
src/: behavior.rs  isa_settings.rs  lib.rs
src/long_mode/: behavior.rs  display.rs  isa_settings.rs  mod.rs  uarch.rs  vex.rs
src/protected_mode/: behavior.rs  display.rs  isa_settings.rs  mod.rs  uarch.rs  vex.rs
src/real_mode/: behavior.rs  display.rs  mod.rs  uarch.rs  vex.rs
src/shared/: evex.in  generated_evex.in
test/: bench.rs
test/long_mode/: behavior.rs  evex_generated.rs  mod.rs  operand.rs  regspec.rs  reuse_test.rs
test/protected_mode/: behavior.rs  evex_generated.rs  mod.rs  operand.rs  regspec.rs
test/real_mode/: behavior.rs  mod.rs  operand.rs
